# Remote-Project

./: .gitignore  README.md  create_test_pdf.py  hello_quantum.ipynb  hello_quantum.py  pyproject.toml  requirements.txt  run_test.py  trans.md
FinancialM/: ACWA_Power_2082_Valuation.xlsx  Apple_AAPL_Valuation.xlsx  generate_acwa_valuation.py  generate_valuation.py
arabic_pdf_translator/: README.md  __init__.py  __main__.py  config.py  main.py  pipeline.py  requirements.txt  utils.py
arabic_pdf_translator/ocr/: __init__.py  engine.py  postprocessor.py  preprocessor.py
arabic_pdf_translator/quality/: __init__.py  evaluator.py
arabic_pdf_translator/translator/: __init__.py  base.py  claude_translator.py  deepl_translator.py  ensemble.py  google_translator.py  openai_translator.py
tests/: test_arabic_newspaper.py  test_config.py  test_postprocessor.py  test_quality.py  test_utils.py
